--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -28,6 +28,10 @@ vi:
     not_found_user: "Không tìm thấy người dùng"
     save_success: "Thành công"
     save_error: "Đã xảy ra lỗi"
+    update_done: "Cập nhật thành công"
+    fail: "Có lỗi"
+    destroy_done: "Xóa thành công"
+    destroy_fail: "Xóa thất bại"
   signup:
     submit: "Tạo tài khoản"
     or: "Nếu đã có tài khoản"
@@ -36,6 +40,10 @@ vi:
     email: "Email"
     password: "Mật khẩu"
     password_cf: "Xác nhận mật khẩu"
+    flash:
+      check_activate: "Kiểm tra hòm thư để hoàn tất đăng ký"
+      activate_done: "Hoàn tất đăng ký"
+      activate_fail: "Đã xảy ra lỗi"
   signin:
     submit: "Đăng nhập"
     or: "Nếu bạn chưa có tài khoản"
@@ -45,3 +53,23 @@ vi:
       danger: "Đăng nhập thất bại"
       success: "Đăng nhập thành công"
     signout: "Đăng xuất"
+    forget_pass:
+      title: "Quên mật khẩu"
+      submit: "Lấy lại mật khẩu"
+      edit: "Mật khẩu mới"
+      text1: "Để lấy lại mật khẩu"
+      text2: "Best regards,"
+      flash_info: "Kiểm tra hòm thư để lấy lại mật khẩu"
+      flash_danger: "Có lỗi khi nhận email"
+      flash_empty: "Không để trống ô mật khẩu"
+      flash_success: "Thay đổi thành công"
+      flash_expired: "Mật khẩu cần được thay trong khoảng 2 tiếng"
+  mailer:
+    activation:
+      title: "Xác thực tài khoản"
+      hello: "Xin chào"
+      welcome: "Cảm ơn bạn đã đăng ký website"
+      active: "Xác thực"
+    sending:
+      subject_activate: "Xác thực tài khoản"
+      subject_password: "Đặt lại mật khẩu"
