task#37279_create_product

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -7,12 +7,32 @@ en:
     study_index: "Study"
     order_index: "Order"
     about_index: "About"
+    product_index: "Products"
+    text1: "Order drink with your table"
+    text2: "Build your style"
+    text3: "Welcome to my Friend Coff"
+    contact: "Contact Us"
+    about: "About me"
+    text_long: "In this page, you can order drink and open study mode for learning"
+    text_long2: "With Coffee, Tea and Cake 100% healthy"
   header:
     login: "Login"
     logout: "Logout"
     signup_index: "Signup"
+    cart: "Cart"
   footer:
     text: "by Sub"
+    address: "59/39 Me Tri, HaNoi, VietNam"
+    email: "Email: contact.sub22@gmail.com"
+    phone: "Phone: 0976808174"
+    working_hours: "Working hours"
+    in_week: "Monday - Fridy: 8am - 5pm"
+    in_week2: "Weekend: 8am - 12pm"
+    service: "Services"
+    payment: "Payments with card"
+    order_table: "Enter your code table"
+    ship: "Free ship Sun* area"
+    copyright: "Copyright"
   user:
     text: "User"
     profile: "Profile"
@@ -79,3 +99,17 @@ en:
       cf_delete: "Are you sure?"
     manager:
       text: "Manager"
+  cart:
+    empty_item: "Have no item in cart"
+    total_amount: "Total Amount - "
+    text: "Your current cart value has a total amount of"
+  product:
+    all_product: "All products"
+    product_title: "Order something you want"
+    name: "Product Name: "
+    price: "Price: "
+    information: "Information"
+    show_info: "Show"
+    add_cart: "Add to cart"
+    search: "Search"
+    detail_title: "Detail view"
