--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -7,12 +7,32 @@ vi:
     study_index: "Học tập"
     order_index: "Một chút cafe"
     about_index: "Xem thêm"
+    product_index: "Sản phẩm"
+    text1: "Đặt đồ uống ngay"
+    text2: "Hãy là chính bạn"
+    text3: "Chào mừng tới Friend Coff"
+    contact: "Liên hệ"
+    about: "Xem thêm"
+    text_long: "Với chế độ học đi kèm với tính năng đặt hàng sẽ giúp bạn có trải nghiệm tốt hơn"
+    text_long2: "Đồ uống đồ ăn đảm bảo 100% sức khỏe"
   header:
     login: "Đăng nhập"
     logout: "Đăng xuất"
     signup_index: "Đăng ký"
+    cart: "Giỏ hàng"
   footer:
     text: "bởi Sub"
+    address: "59/39 Me Tri, HaNoi, VietNam"
+    email: "Hòm thư: contact.sub22@gmail.com"
+    phone: "Điện thoại: 0976808174"
+    working_hours: "Thời gian mở cửa"
+    in_week: "Thứ 2 - Thứ 6: 8am - 5pm"
+    in_week2: "Cuối tuấn: 8am - 12pm"
+    service: "Dịch vụ"
+    payment: "Thanh toán qua mastercard/banking"
+    order_table: "Thanh toán tại quầy"
+    ship: "Miễn phí ship tại Sun*"
+    copyright: "Bản quyền"
   user:
     text: "Người dùng"
     profile: "Thông tin"
@@ -79,3 +99,17 @@ vi:
       cf_delete: "Bạn có chắc chắn xóa?"
     manager:
       text: "Quản lý"
+  cart:
+    empty_item: "Không có đơn hàng nào"
+    total_amount: "Tổng -  "
+    text: "Tổng giá trị đơn hàng của bạn"
+  product:
+    all_product: "Tất cả sản phẩm"
+    product_title: "Hãy chọn cho mình những ly coffee"
+    name: "Tên sản phẩm: "
+    price: "Giá: "
+    information: "Thông tin mô tả"
+    show_info: "Xem"
+    add_cart: "Thêm vào giỏ hàng"
+    search: "Tìm kiếm"
+    detail_title: "Chi tiết sản phẩm"
