task37296_add_remove_in_cart

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -52,6 +52,8 @@ en:
     fail: "Have some wrong"
     destroy_done: "Delete successfully"
     destroy_fail: "Delete fail"
+    not_found_cart: "Not found cart"
+    not_found_product: "Not found product"
   signup:
     submit: "Create an account"
     or: "If already have account"
@@ -101,15 +103,21 @@ en:
       text: "Manager"
   cart:
     empty_item: "Have no item in cart"
+    my_cart: "My Cart"
     total_amount: "Total Amount - "
+    checkout: "Checkout Now!"
     text: "Your current cart value has a total amount of"
+    image: "Image"
+    action: "Action"
   product:
     all_product: "All products"
     product_title: "Order something you want"
-    name: "Product Name: "
-    price: "Price: "
+    name: "Product Name "
+    price: "Price "
+    quantity: "Quantity"
     information: "Information"
     show_info: "Show"
     add_cart: "Add to cart"
     search: "Search"
     detail_title: "Detail view"
+    voted: "Voted"
