--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -52,6 +52,8 @@ vi:
     fail: "Có lỗi"
     destroy_done: "Xóa thành công"
     destroy_fail: "Xóa thất bại"
+    not_found_cart: "Không tìm thấy giỏ hàng"
+    not_found_product: "Không tìm thấy sản phẩm"
   signup:
     submit: "Tạo tài khoản"
     or: "Nếu đã có tài khoản"
@@ -101,15 +103,21 @@ vi:
       text: "Quản lý"
   cart:
     empty_item: "Không có đơn hàng nào"
+    my_cart: "Giỏ hàng"
     total_amount: "Tổng -  "
+    checkout: "Đặt hàng"
     text: "Tổng giá trị đơn hàng của bạn"
+    image: "Hình ảnh"
+    action: "Hành động"
   product:
     all_product: "Tất cả sản phẩm"
     product_title: "Hãy chọn cho mình những ly coffee"
-    name: "Tên sản phẩm: "
-    price: "Giá: "
+    name: "Tên sản phẩm "
+    price: "Giá "
+    quantity: "Số lượng"
     information: "Thông tin mô tả"
     show_info: "Xem"
     add_cart: "Thêm vào giỏ hàng"
     search: "Tìm kiếm"
     detail_title: "Chi tiết sản phẩm"
+    voted: "Đánh giá"
